--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ header {
     width: 100%;
     top: 0;
     left: 0;
-}
 
 /*Fuentes para pagina*/
 @font-face {
@@ -34,8 +33,8 @@ section {
 }
 
 /*Aqui va la imagen para escritorio con content*/ /*GABRIEL*/
-
-
+ imagen{
+     conten:url(imagen{})    
 /*Contenedor para organizar textos*/
 .flex-container-2 {
     display: flex;
